Feedback from CAB. Minor content changes

--- a/content/02_sectionIntroMisions.yaml
+++ b/content/02_sectionIntroMisions.yaml
@@ -8,9 +8,9 @@ data:
   title: <span class="primary_color">Marte como imaginario.</span> <br>La observación de Marte en su órbita desde la Antigüedad hasta la década de 1960
   mainText:
     - Desde los astrónomos Egipcios en el segundo milenio antes de Cristo, Marte ha sido sujeto de observación y estudio desde la Tierra.
-    - En 1660 Galileo lo observó con su telescopio y posteriormente otros astrónomos como Huygens, Cassini, Proctor y Dawes o Schiaparelli, dibujaron su cartografía e hicieron sus observaciones con mayor o menor precisión.
-    - <strong>A las preguntas que presentaba al inicio su aparente movimiento retrógrado y su color rojizo, se sumó después la supuesta percepción de construcciones en su superficie</strong>. Creemos que motivadas fundamentalmente por el interés en hallar vida en otro planeta.
-    - En 1964, Estados Unidos lanza la Mariner 4 y doce meses después envía 19 fotografías de su superficie. <strong>Comienza la era de las misiones</strong>.
+    - En 1610 Galileo lo observó con su telescopio y posteriormente otros astrónomos como Huygens, Cassini, Proctor y Dawes, Schiaparelli o Percival Lowell, dibujaron su cartografía e hicieron sus observaciones con mayor o menor precisión.
+    - <strong>A las preguntas que presentaba al inicio su aparente movimiento retrógrado y su color rojizo, se sumó después la supuesta percepción de construcciones en su superficie</strong>. Todas ellas motivadas fundamentalmente por el interés en hallar vida en otro planeta.
+    - Desde 1960, la carrera espacial entre la URSS y los EEUU ya identificó a Marte como un objetivo de la pugna entre las potencias. <strong>Comienza la era de las misiones espaciales en Marte</strong>.
   secondaryText:
 
 assets:
