--- a/content/07_SectionCab02.yaml
+++ b/content/07_SectionCab02.yaml
@@ -7,11 +7,12 @@ menuTitle: La investigación en el CAB
 data:
   title: La investigación en el CAB
   mainText:
-    - <strong>Los científicos del CAB contribuirán a la ciencia y operación de RLS (Raman Laser Spectrometer)</strong> que volará en la misión ExoMars de la ESA a bordo del <strong>rover Rosalind Franklin</strong> a Marte después de su lanzamiento en 2022.
+    - El <strong>Centro de Astrobiología (CAB, CSIC-INTA)</strong> es el único centro español, y uno de los pocos a nivel mundial, que <strong>participan en dos de los cuatro instrumentos a bordo del telescopio espacial James Webb, el NIRSpec y MIRI</strong>, cuyo lanzamiento se ha producido en diciembre de 2021 y que permitirá explorar regiones y épocas en la historia del universo inaccesibles hoy en día.
+    - <strong>El CAB contribuirá a la ciencia y operación de RLS (Raman Laser Spectrometer)</strong> que se llevará a Marte a bordo del <strong>rover Rosalind Franklin en la misión ExoMars de la ESA</strong> después de su lanzamiento en 2022.
     - Particularmente relevante será la <strong>misión PLATO (ESA), que buscará y caracterizará planetas similares a la Tierra y sus atmósferas</strong>.
 
   secondaryText:
-    - También desarrolla proyectos de <strong>investigación en ambientes y procesos análogos aquí, en la Tierra</strong>, para mejorar nuestra comprensión de cómo la vida puede existir e interactuar tanto en entornos de superficie como en el subsuelo profundo.
+    - El CAB también desarrolla proyectos de <strong>investigación en ambientes y procesos análogos aquí en la Tierra</strong>, a otros planetas y lunas del Sistema Solar, como el desierto de Atacama, Río Tinto o el Dallol en Etiopía, para mejorar nuestra comprensión de cómo la vida puede existir e interactuar tanto en entornos de superficie como en el subsuelo profundo.
     - <strong>El CAB tiene los medios, las instalaciones, los científicos y un magnífico centro para abordar y contribuir a los principales retos de la Astrobiología en el futuro cercano</strong>.
 
 assets:
