--- a/content/09_sectionFoot.yaml
+++ b/content/09_sectionFoot.yaml
@@ -9,9 +9,9 @@ data:
   mainText:
     - <strong>Centro de Astrobiología (CAB)</strong>
     - Director. Víctor Parro García
-    - Coordinador del proyecto CAB. David Barrado Navascués
-    - Responsable de comunicación del proyecto Cultura con C de Cosmos (C3). Susana Cabañero Rodríguez
-    - Asesor Científico. Juan Ángel Vaquerizo
+    - Director científico proyecto María de Maeztu. David Barrado Navascués
+    - Gestión y comunicación proyecto María de Maeztu. Susana Cabañero Rodríguez
+    - Asesores científicos. José Antonio Rodríguez Manfredi y el equipo de instrumentación espacial CAB, Juan Ángel Vaquerizo.
   secondaryText:
     - <strong>Escuela Superior de Diseño de Madrid (e/s/d)</strong>
     - Directora. Marina Arespacochaga Maroto
