--- a/content/03_sectionExplorers.yaml
+++ b/content/03_sectionExplorers.yaml
@@ -2,7 +2,7 @@
 # https://www.figma.com/file/LVJsJViTo0ivzgnE0rgW3D/rems_wireframes?node-id=2873%3A1486
 
 title: Sección
-menuTitle: Histórico de misiones
+menuTitle: Histórico de misiones de superficie
 assets:
   backgroundIllustration: /img/backgrounds/003_b.jpg
 
