--- a/content/04_sectionIntroMachines.yaml
+++ b/content/04_sectionIntroMachines.yaml
@@ -2,16 +2,16 @@
 # https://www.figma.com/file/LVJsJViTo0ivzgnE0rgW3D/rems_wireframes?node-id=2873%3A1486
 
 title: Sección
-menuTitle: Las máquinas son los nuevos exploradores
+menuTitle: Los robots son los nuevos exploradores
 
 data:
-  title: <span class="primary_color">Las máquinas son los nuevos exploradores.</span><br> Misiones con participación española en Marte.
+  title: <span class="primary_color">Los robots son los nuevos exploradores.</span><br> Misiones con participación española en Marte.
   mainText:
-    - El <strong>Centro de Astrobiología (CAB)</strong>, fue creado en 1998 como centro mixto entre el Centro Superior de Investigaciones Científicas (CSIC) y el Instituto Nacional de Técnica Aeroespacial (INTA).  En 2.000 se integró en el <strong>NASA Astrobiology Institute (NAI)</strong> convirtiéndose en el primer Miembro Asociado fuera de los Estados Unidos.
-    - <strong>Los equipos multidisciplinares del CAB ya están estudiando la atmósfera de Marte desde tres estaciones ambientales independientes construidas y operativas bajo su liderazgo</strong>.
-    - <ul><li><strong>REMS</strong> (desde 2012, en el rover Curiosity, en el Cráter Gale)</li><li><strong>TWINS</strong> (desde 2018, en el Insight, en la región de Elyseum Planitia)</li><li><strong>MEDA</strong> (desde febrero de 2021 en el rover Perseverance, en al Cráter Jezero)</li></ul>
+    - El <strong>Centro de Astrobiología (CAB)</strong> es un centro de investigación multidisciplinar cuyo principal objetivo es estudiar el origen, presencia e influencia de la vida en el universo. Fue creado en 1999 como centro mixto del Consejo Superior de Investigaciones Científicas (CSIC) y del Instituto Nacional de Técnica Aeroespacial (INTA). En 2000 se integró en el NASA Astrobiology Institute (actualmente el <strong>NASA Astrobiology Program</strong>) convirtiéndose en el primer miembro asociado fuera de los Estados Unidos.
+    - Los investigadores del CAB llevan estudiando la atmósfera de Marte desde 2012 con tres estaciones medioambientales construidas y operadas bajo su liderazgo.
+    - <ul class="list"><li><strong>REMS.</strong> Desde 2012 en el Cráter Gale, a bordo del rover Curiosity.</li><li><strong>TWINS.</strong> Desde 2018 en Elysium Planitia, a bordo del módulo aterrizador InSight.</li><li><strong>MEDA.</strong> Desde febrero de 2021 en el Cráter Jezero, a bordo del rover Perseverance.</li></ul>
   # secondaryText:
-  # - Hoy se puede concluir que gran parte de la superficie marciana es mucho más vieja de lo que previamente se había pensado. Y nuevas investigaciones sugieren que el planeta ha mantenido actividad geológica hasta nuestros días. Con la misión ruso-europea ExoMars Trace Gas Orbiter (2016, observando cómo las enormes tormentas de polvo marcianas se forman), en particular la Mars Insight (2018), Curiosity (2012) y Perseverance (2021) y las apuestas de otras agencias internacionales, seguimos a la expectativa de nuevas confirmaciones y de grandes hallazgos que nos desvelen los misterios de nuestro fascinante vecino rojo.
+  # - Hoy se puede concluir que gran parte de la superficie marciana es mucho más vieja de lo que previamente se había pensado. Y nuevas investigaciones sugieren que el planeta ha mantenido actividad geológica hasta nuestros días. Con la misión ruso-europea ExoMars Trace Gas Orbiter (2016, observando cómo las enormes tormentas de polvo marcianas se forman), en particular la Mars InSight (2018), Curiosity (2012) y Perseverance (2021) y las apuestas de otras agencias internacionales, seguimos a la expectativa de nuevas confirmaciones y de grandes hallazgos que nos desvelen los misterios de nuestro fascinante vecino rojo.
   explorers:
     - # 0
       name: 'Curiosity'
@@ -19,7 +19,7 @@ data:
         lon: 85
         lat: 60
     - # 1
-      name: 'Insight'
+      name: 'InSight'
       position:
         lon: 84
         lat: 53
