Fix content tags problem & minor typo

--- a/content/03_sectionExplorersHome.yaml
+++ b/content/03_sectionExplorersHome.yaml
@@ -10,7 +10,7 @@ data:
     - Las distintas misiones enviadas a Marte, ya sea para orbitar a su alrededor o para posarse en él, han aportado una ingente cantidad de datos sobre la geografía marciana.
     - <strong>La observación geológica en alto detalle del planeta ha demostrado que alguna vez fue tan activo como la Tierra.</strong>.
     - Uno de los objetivos principales desde el inicio fue buscar pruebas de la posible existencia de agua.
-    - <strong>Hoy se da por supuesto que hace 3700-3500 millones de años, tuvo océanos, lagos y ríos corriendo por su superficie. Actualmente hay hielo en los casquetes polares y en el subsuelo.</strong>.
+    - <strong>Hoy se da por supuesto que hace 3700-3500 millones de años tuvo océanos, lagos y ríos corriendo por su superficie. Actualmente hay hielo en los casquetes polares y en el subsuelo.</strong>.
     - Esa presencia de agua en Marte sugiere que <strong>el planeta pudo reunir las condiciones para albergar vida</strong>.
 
   #secondaryText:
