--- a/content/06_SectionCab01.yaml
+++ b/content/06_SectionCab01.yaml
@@ -10,10 +10,12 @@ data:
     - Las instalaciones principales del <strong>CAB</strong> se sitúan en Torrejón de Ardoz (campus del INTA) y en Villanueva de la Cañada (sede del Centro Europeo de Astronomía Espacial, ESAC) ambas localidades cercanas a Madrid.
     - <strong>Su equipo multidisciplinar de científicos e ingenieros</strong> (astrofísicos, planetólogos, geólogos, geoquímicos, químicos, geomicrobiólogos, microbiólogos moleculares, ingenieros e ingenieros de sistemas) <strong>lo convierten en un centro de investigación transdisciplinar ideal para abordar la astrobiología</strong>.
     - Actualmente el CAB cuenta con más de 150 trabajadores organizados funcionalmente en cuatro departamentos, <strong>Astrofísica, Evolución Molecular, Planetología y Habitabilidad e Instrumentación Avanzada. </strong>Cuenta también con varios <strong>laboratorios</strong> equipados con instalaciones e instrumentación para múltiples técnicas.
-
   secondaryText:
     - El CAB fue distinguido en 2017 por el Ministerio de Ciencia Innovación y Universidades como Unidad de Excelencia <María de Maeztu>, para desarrollar el programa estratégico de investigación “Assessing the feasibility of life as a universal phenomenon through planetary exploration” por una duración de cuatro años. Los objetivos del programa son los siguientes.
-    - <ul class="list"><li>Exploración in situ de objetos planetarios en el Sistema Solar (Marte, Europa, Mercurio)</li><li>Identificación de biomarcadores clave en entornos análogos terrestres de otros planetas</li><li>Simulaciones en laboratorio para caracterizar ambientes planetarios y cometarios</li><li>Búsqueda remota y caracterización de exoplanetas.</li></ul>
+    - · Exploración in situ de objetos planetarios en el Sistema Solar (Marte, Europa, Mercurio).
+    - · Identificación de biomarcadores clave en entornos análogos terrestres de otros planetas.
+    - · Simulaciones en laboratorio para caracterizar ambientes planetarios y cometarios.
+    - · Búsqueda remota y caracterización de exoplanetas.
 
 assets:
   backgroundIllustration: /img/001.webp
