--- a/content/03_sectionExplorers.yaml
+++ b/content/03_sectionExplorers.yaml
@@ -19,7 +19,7 @@ data:
       activity: "2 minutos (Orbitador 452 días)"
       land: "URSS"
       agency: "Unión Soviética"
-      status: "Exito parcial"
+      status: "Éxito parcial"
     position:
       lon: 7
       lat: 82
@@ -54,7 +54,7 @@ data:
       activity: "2306 días (6,3 años) o 2245 soles"
       land: "EEUU"
       agency: "NASA"
-      status: "Exito"
+      status: "Éxito"
     position:
       lon: 35
       lat: 38
@@ -88,7 +88,7 @@ data:
       activity: "1316 días (3,6 años) o 1281 soles"
       land: "EEUU"
       agency: "NASA"
-      status: "Exito"
+      status: "Éxito"
     position:
       lon: 88
       lat: 20
@@ -119,7 +119,7 @@ data:
       activity: "85 días (83 soles)"
       land: "EEUU"
       agency: "NASA"
-      status: "Exito"
+      status: "Éxito"
     position:
       lon: 40
       lat: 40
@@ -161,7 +161,7 @@ data:
       activity: "2249 días (6,2 años) o 2208 soles"
       land: "EEUU"
       agency: "NASA"
-      status: "Exito"
+      status: "Éxito"
     position:
       lon: 97
       lat: 55
@@ -202,7 +202,7 @@ data:
       activity: "14 años. (previstos 92,5 días terrestres)."
       land: "EEUU"
       agency: "NASA"
-      status: "Exito"
+      status: "Éxito"
     position:
       lon: 50
       lat: 50
@@ -239,7 +239,7 @@ data:
       activity: "157 soles"
       land: "EEUU"
       agency: "NASA"
-      status: "Exito"
+      status: "Éxito"
     position:
       lon: 15
       lat: 10
@@ -278,7 +278,7 @@ data:
       activity: "Sigue en activo"
       land: "EEUU"
       agency: "NASA"
-      status: "Exito"
+      status: "Éxito"
     position:
       lon: 85
       lat: 60
@@ -296,11 +296,11 @@ data:
       activity: "Sigue en activo"
       land: "EEUU"
       agency: "NASA"
-      status: "Exito"
+      status: "Éxito"
     position:
       lon: 84
       lat: 53
-    cabCollaboration: "En páginas siguientes podrás conocer en profundidad todos los detalles y objetivos de ésta misión del Curiosity de la NASA y del REMS del CAB."
+    cabCollaboration: "En páginas siguientes podrás conocer en profundidad todos los detalles y objetivos de ésta misión del InSight de la NASA y del TWINS del CAB."
     picture: "/img/explorers/09.jpg"
     picture_flag: "/img/flags/EEUU.svg"
   - # 10 - PERSEVERANCE
@@ -314,11 +314,11 @@ data:
       activity: "Sigue en activo"
       land: "EEUU"
       agency: "NASA"
-      status: "Exito"
+      status: "Éxito"
     position:
       lon: 74
       lat: 40
-    cabCollaboration: "En páginas siguientes podrás conocer en profundidad todos los detalles y objetivos de ésta misión del Curiosity de la NASA y del REMS del CAB."
+    cabCollaboration: "En páginas siguientes podrás conocer en profundidad todos los detalles y objetivos de ésta misión del Perseverance de la NASA y del MEDA del CAB."
     picture: "/img/explorers/10.jpg"
     picture_flag: "/img/flags/EEUU.svg"
   - # 7 - ZHURONG (Rover)
@@ -332,7 +332,7 @@ data:
       activity: "Sigue en activo"
       land: "China"
       agency: "CNSA"
-      status: "Exito"
+      status: "Éxito"
     position:
       lon: 85
       lat: 23
