Change temperatureGraph & fix minor typo

--- a/content/02_sectionIntroMisions.yaml
+++ b/content/02_sectionIntroMisions.yaml
@@ -10,7 +10,7 @@ data:
     - Desde los astrónomos Egipcios en el segundo milenio antes de Cristo, Marte ha sido sujeto de observación y estudio desde la Tierra.
     - En 1610 Galileo lo observó con su telescopio y posteriormente otros astrónomos como Huygens, Cassini, Proctor y Dawes, Schiaparelli o Percival Lowell, dibujaron su cartografía e hicieron sus observaciones con mayor o menor precisión.
     - <strong>A las preguntas que presentaba al inicio su aparente movimiento retrógrado y su color rojizo, se sumó después la supuesta percepción de construcciones en su superficie</strong>. Todas ellas motivadas fundamentalmente por el interés en hallar vida en otro planeta.
-    - Desde 1960, la carrera espacial entre la URSS y los EEUU ya identificó a Marte como un objetivo de la pugna entre las potencias. <strong>Comienza la era de las misiones espaciales en Marte</strong>.
+    - Desde 1960, la carrera espacial entre la URSS y los EEUU ya identificó a Marte como un objetivo de la pugna entre las potencias. <strong>Comienza la era de las misiones espaciales</strong>.
   secondaryText:
 
 assets:
