--- a/content/04_sectionFarewellMachines.yaml
+++ b/content/04_sectionFarewellMachines.yaml
@@ -7,7 +7,7 @@ menuTitle: El destino de los datos
 data:
   title: <span class="primary_color">El destino de los datos</span>
   mainText:
-    - Los datos recogidos por las misiones TWINS, REMS y MEDA son enviados a la Tierra para su estudio y análisis.
+    - Los datos recogidos por los instrumentos TWINS, REMS y MEDA son enviados a la Tierra para su estudio y análisis.
     - Y te preguntarás, ¿qué se hace en el CAB con la información recibida?
     - Volvamos a la Tierra...
 
